# starman

./: CHANGELOG.md  README.md  starman.cabal  words.txt
src/: Main.hs  Starman.hs
