cabal-version:      2.4
name:               starman
version:            0.1.0.0
synopsis:
homepage:
license:            MIT
license-file:       LICENSE
author:             Ismael Carlos Velten
maintainer:         ismaelcarlosvelten@gmail.com
extra-source-files: CHANGELOG.md

executable starman
    main-is:           Main.hs
    other-modules:     Starman
    build-depends:     base ^>=4.17.2.0
                     , random
    hs-source-dirs:    src
    default-language:  Haskell2010
